engine/tests/fixtures/invalid/ui-web/proj-ui-contract-stub.tg
projection proj_ui_contract_stub {
  name "Stub Shared UI"
  description "Shared UI for invalid web projection tests"

  type ui_contract
  realizes []
  outputs [ui_contract]

  screens {
    screen stub_home kind dashboard title "Stub Home"
  }

  status active
}
